--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,7 @@
-{% set name = "pest-language-server" %}
 {% set version = "0.13.2" %}
 
 package:
-  name: {{ name|lower }}
+  name: pest-language-server
   version: {{ version }}
 
 source:
@@ -10,7 +9,7 @@ source:
   sha256: 8c1b4def059a7131f3f2857c3cc9403efe68f2e0f02a7e93a7a279572253ef15
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   build:
